alignment issue solved

--- a/src/app/CreateEvent/select-event-customers/select-event-customers.component.scss
+++ b/src/app/CreateEvent/select-event-customers/select-event-customers.component.scss
@@ -754,3 +754,7 @@
   font-size: 14px;
   text-transform: uppercase;
 }
+
+.divider {
+  border-left: 1px solid silver;
+}
